--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/ActivityPage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/ActivityPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:TCT.FitApp.Mobile.Components"
+             xmlns:local="clr-namespace:TCT.FitApp.Mobile.Components" xmlns:dg="clr-namespace:Xamarin.Forms.DataGrid;assembly=Xamarin.Forms.DataGrid"
              x:Class="TCT.FitApp.Mobile.Pages.ActivityPage">
     <ContentPage.Content>
 
@@ -13,54 +13,57 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Grid Grid.Row="0" Margin="10">
-                <Label VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" x:Name="lblProfile" Text="Manage Activities" FontSize="20" FontAttributes="Bold"/>
-            </Grid>
+            <!--<Grid Grid.Row="0" Margin="0">
+                <Label VerticalOptions="Start" HorizontalOptions="CenterAndExpand" x:Name="lblProfile" Text="Manage Activities" FontSize="20" FontAttributes="Bold"/>
+            </Grid>-->
 
             <!--Date-->
-            <Grid Grid.Row="1">
-                <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
-                    <Label x:Name="lblDate" Margin="15,0,0,0" Text="Date" FontSize="18"/>
-                </StackLayout>
-                <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
-                    <DatePicker x:Name="cboDatePicker" Margin="0,5,0,0" FontSize="18" />
-                </StackLayout>
-            </Grid>
+            <StackLayout>
+                <Grid Grid.Row="1" Margin="10">
+                    <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
+                        <Label x:Name="lblDate" Margin="15,0,0,0" Text="Date" FontSize="18"/>
+                    </StackLayout>
+                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
+                        <DatePicker x:Name="cboDatePicker" Margin="0,5,0,0" FontSize="18" />
+                    </StackLayout>
+                </Grid>
 
-            <!--Activity-->
-            <Grid Grid.Row="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
-                    <Label x:Name="lblActivity" Margin="15,0,0,0" Text="Activity" FontSize="18"/>
-                </StackLayout>
-                <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
-                    <Entry x:Name="txtActivity" IsReadOnly="True" Margin="0,5,0,0" FontSize="18" />
-                </StackLayout>
-            </Grid>
+                <!--Activity-->
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
+                        <Label x:Name="lblActivity" Margin="15,0,0,0" Text="Activity" FontSize="18"/>
+                    </StackLayout>
+                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
+                        <Picker x:Name="cboActivity" Title="Activity Name" HorizontalTextAlignment="End" ItemsSource="{Binding Activities}" ItemDisplayBinding="{Binding Name}" IsEnabled="True" Margin="0,5,0,0" FontSize="18" />
+                    </StackLayout>
+                </Grid>
 
-            <!--Duration-->
-            <Grid Grid.Row="3">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
-                    <Label x:Name="lblDuration" Margin="15,0,0,0" Text="Duration (min)" FontSize="18"/>
-                </StackLayout>
-                <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
-                    <Entry x:Name="txtDuration" IsReadOnly="True" Margin="0,5,0,0" FontSize="18" />
-                </StackLayout>
-            </Grid>
+                <!--Duration-->
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
+                        <Label x:Name="lblDuration" Margin="15,0,0,0" Text="Duration (min)" FontSize="18"/>
+                    </StackLayout>
+                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
+                        <Entry x:Name="txtDuration" IsReadOnly="False" Margin="0,5,0,0" FontSize="18" />
+                    </StackLayout>
+                </Grid>
+            </StackLayout>
 
-            <!--Difficulty-->
+                <!--Difficulty-->
             <Grid Grid.Row="4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -70,33 +73,53 @@
                     <Label x:Name="lblDifficulty" Margin="15,0,0,0" Text="Difficulty" FontSize="18"/>
                 </StackLayout>
                 <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand">
-                    <Entry x:Name="txtDifficulty" IsReadOnly="True" Margin="0,5,0,0" FontSize="18" />
+                    <Entry x:Name="txtDifficulty" IsEnabled="True" Margin="0,5,0,0" FontSize="18" />
                 </StackLayout>
+            </Grid>
+            
+            <Grid Grid.Row="5">
+                <Grid Margin="15">
+                    <Label Text="Activities" Margin="0,10,0,0" HorizontalOptions="Start" FontSize="Large" FontAttributes="Bold"/>
+                    <dg:DataGrid
+                    x:Name="dgvActivities"
+                    SelectionEnabled="True"
+                    BorderColor="#FFFFFF"
+                    BackgroundColor="#FFFFF"
+                    HeaderBackground="#FFFFFF"
+                    ActiveRowColor="#8899AA">
+                        <dg:DataGrid.Columns>
+                            <dg:DataGridColumn Title="Name" PropertyName="Name"/>
+                            <dg:DataGridColumn Title="Duration (mins)" PropertyName="Duration"/>
+                            <dg:DataGridColumn Title="Difficulty" PropertyName="DifficultyLevel"/>
+                            <dg:DataGridColumn Title="Calories Burned" PropertyName="CaloriesBurned"/>
+                        </dg:DataGrid.Columns>
+                    </dg:DataGrid>
+                </Grid>
             </Grid>
 
             <!--Buttons-->
-            <Grid Grid.Row="5">
+            <Grid Grid.Row="6">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Button
-                        Grid.Column="0"
-                        x:Name="btnHome"
-                        Text="Home"
-                        VerticalOptions="CenterAndExpand"
-                        HorizontalOptions="CenterAndExpand"
-                        Clicked="btnHome_Clicked"/>
+                    Grid.Column="0"
+                    x:Name="btnHome"
+                    Text="Home"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="CenterAndExpand"
+                    Clicked="btnHome_Clicked"/>
                 <Button
-                        Grid.Column="1"
-                        x:Name="btnAdd"
-                        Text="Ahh"
-                        VerticalOptions="CenterAndExpand"
-                        HorizontalOptions="CenterAndExpand"
-                        Clicked="btnAdd_Clicked"/>
+                    Grid.Column="1"
+                    x:Name="btnAdd"
+                    Text="Add"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="CenterAndExpand"
+                    Clicked="btnAdd_Clicked"/>
             </Grid>
-
         </Grid>
+
     </ContentPage.Content>
 </ContentPage>
