--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/ActivityPage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/ActivityPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TCT.FitApp.Mobile.Components" xmlns:dg="clr-namespace:Xamarin.Forms.DataGrid;assembly=Xamarin.Forms.DataGrid"
+             xmlns:Models="clr-namespace:TCT.FitApp.Mobile.Models"
              x:Class="TCT.FitApp.Mobile.Pages.ActivityPage">
-    <ContentPage.Content>
 
         <Grid HorizontalOptions="Center" Margin="0,50,0,0">
             <Grid.RowDefinitions>
@@ -25,17 +25,17 @@
 
             <!--Date-->
             <StackLayout>
-                <Grid Grid.Row="1" Margin="10">
-                    <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
-                        <Label x:Name="lblDate" Margin="15,0,0,0" Text="Date" FontSize="18"/>
+                <Grid Grid.Row="1" Margin="10,10,10,0">
+                    <StackLayout Grid.Column="0" VerticalOptions="Center" >
+                        <Label x:Name="lblDate" Margin="15,2,0,0" Text="Date" HorizontalTextAlignment="End" FontSize="18"/>
                     </StackLayout>
                     <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
-                        <DatePicker x:Name="cboDatePicker" Margin="0,5,0,0" FontSize="18" />
+                        <DatePicker x:Name="cboDate" Margin="0,5,0,0" HorizontalOptions="End" DateSelected="cboDate_DateSelected" FontSize="18" />
                     </StackLayout>
                 </Grid>
 
                 <!--Activity-->
-                <Grid Grid.Row="2">
+                <Grid Grid.Row="2" Margin="10,0,10,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
@@ -43,13 +43,19 @@
                     <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
                         <Label x:Name="lblActivity" Margin="15,0,0,0" Text="Activity" FontSize="18"/>
                     </StackLayout>
-                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
-                        <Picker x:Name="cboActivity" Title="Activity Name" HorizontalTextAlignment="End" ItemsSource="{Binding Activities}" ItemDisplayBinding="{Binding Name}" IsEnabled="True" Margin="0,5,0,0" FontSize="18" />
+                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="End">
+                        <Picker x:Name="cboActivity" 
+                                Title="Activity Name" 
+                                HorizontalTextAlignment="End" 
+                                ItemsSource="{Binding Activities}" 
+                                ItemDisplayBinding="{Binding Name}" 
+                                Margin="0,5,0,0" 
+                                FontSize="18" />
                     </StackLayout>
                 </Grid>
 
                 <!--Duration-->
-                <Grid Grid.Row="3">
+                <Grid Grid.Row="3" Margin="10,0,10,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
@@ -57,69 +63,68 @@
                     <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
                         <Label x:Name="lblDuration" Margin="15,0,0,0" Text="Duration (min)" FontSize="18"/>
                     </StackLayout>
-                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
-                        <Entry x:Name="txtDuration" IsReadOnly="False" Margin="0,5,0,0" FontSize="18" />
+                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand">
+                    <Entry x:Name="txtDuration" HorizontalTextAlignment="End" Keyboard="Numeric" WidthRequest="100" IsReadOnly="False" Margin="0,5,0,0" FontSize="18" />
+                    </StackLayout>
+                </Grid>
+
+                <!--Difficulty-->
+                <Grid Grid.Row="4" Margin="10,0,10,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
+                    <Label x:Name="lblDifficulty" Margin="15,0,0,0" Text="Difficulty" FontSize="18"/>
+                    </StackLayout>
+                    <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand">
+                    <Entry x:Name="txtDifficulty" HorizontalTextAlignment="End" Keyboard="Numeric" WidthRequest="100" IsReadOnly="False" Margin="0,5,0,0" FontSize="18" />
                     </StackLayout>
                 </Grid>
             </StackLayout>
 
-                <!--Difficulty-->
-            <Grid Grid.Row="4">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
-                    <Label x:Name="lblDifficulty" Margin="15,0,0,0" Text="Difficulty" FontSize="18"/>
-                </StackLayout>
-                <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand">
-                    <Entry x:Name="txtDifficulty" IsEnabled="True" Margin="0,5,0,0" FontSize="18" />
-                </StackLayout>
-            </Grid>
-            
-            <Grid Grid.Row="5">
+        <Grid Grid.Row="5" HeightRequest="200">
                 <Grid Margin="15">
                     <Label Text="Activities" Margin="0,10,0,0" HorizontalOptions="Start" FontSize="Large" FontAttributes="Bold"/>
-                    <dg:DataGrid
+                <dg:DataGrid
                     x:Name="dgvActivities"
                     SelectionEnabled="True"
                     BorderColor="#FFFFFF"
                     BackgroundColor="#FFFFF"
                     HeaderBackground="#FFFFFF"
                     ActiveRowColor="#8899AA">
-                        <dg:DataGrid.Columns>
+                    <dg:DataGrid.Columns>
                             <dg:DataGridColumn Title="Name" PropertyName="Name"/>
                             <dg:DataGridColumn Title="Duration (mins)" PropertyName="Duration"/>
                             <dg:DataGridColumn Title="Difficulty" PropertyName="DifficultyLevel"/>
                             <dg:DataGridColumn Title="Calories Burned" PropertyName="CaloriesBurned"/>
                         </dg:DataGrid.Columns>
+						<dg:DataGrid.SelectedItem>
+							<Models:Day/>
+						</dg:DataGrid.SelectedItem>
                     </dg:DataGrid>
                 </Grid>
             </Grid>
 
-            <!--Buttons-->
             <Grid Grid.Row="6">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+            </Grid.ColumnDefinitions>
                 <Button
                     Grid.Column="0"
-                    x:Name="btnHome"
-                    Text="Home"
-                    VerticalOptions="CenterAndExpand"
-                    HorizontalOptions="CenterAndExpand"
-                    Clicked="btnHome_Clicked"/>
-                <Button
-                    Grid.Column="1"
                     x:Name="btnAdd"
                     Text="Add"
-                    VerticalOptions="CenterAndExpand"
-                    HorizontalOptions="CenterAndExpand"
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center"
                     Clicked="btnAdd_Clicked"/>
-            </Grid>
+                <Button
+                    Grid.Column="1"
+                    x:Name="btnDelete"
+                    Text="Delete"
+                    HorizontalOptions="Center"
+                    Clicked="btnDelete_Clicked"/>
+        </Grid>
         </Grid>
 
-    </ContentPage.Content>
 </ContentPage>
